ecmascript/parser/tests/test262-error-references/fail/91cb0ae4feb7f531.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/91cb0ae4feb7f531.js:1:5
  |
1 | ({a:this}=0)
  |     ^^^^

